--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "dependencies": {
     "express": "^4.19.2",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "express-session": "^1.18.0"
   }
 }
