--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "pg": "^8.12.0"
   }
 }
